--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "js-cookie": "^2.2.1",
     "next": "9.2.0",
+    "next-cookies": "^2.0.3",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
