--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
-    "javascript-time-ago": "^2.0.6",
     "js-cookie": "^2.2.1",
     "next": "9.2.0",
     "next-cookies": "^2.0.3",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-time-ago": "^5.0.7"
+    "react-dom": "16.12.0"
   }
 }
