--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "alles-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "axios": "^0.19.1",
-    "js-cookie": "^2.2.1",
-    "next": "9.2.0",
-    "next-cookies": "^2.0.3",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
-  }
+	"name": "alles-site",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "prettier --write \"**/*.+(js|jsx|json)\""
+	},
+	"dependencies": {
+		"axios": "^0.19.1",
+		"js-cookie": "^2.2.1",
+		"next": "9.2.0",
+		"next-cookies": "^2.0.3",
+		"react": "16.12.0",
+		"react-dom": "16.12.0"
+	},
+	"devDependencies": {
+		"prettier": "^1.19.1"
+	}
 }
