--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^0.19.1",
 		"js-cookie": "^2.2.1",
+		"moment": "^2.24.0",
 		"next": "9.2.0",
 		"next-cookies": "^2.0.3",
 		"react": "16.12.0",
