--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
 		"format": "prettier --write \"**/*.+(js|jsx|json)\""
 	},
 	"dependencies": {
+		"argon2": "^0.26.2",
 		"axios": "^0.19.1",
+		"bcrypt": "^4.0.1",
+		"coredb-models": "https://github.com/alleshq/coredb-models",
 		"js-cookie": "^2.2.1",
+		"jsonwebtoken": "^8.5.1",
+		"mariadb": "^2.3.1",
 		"moment": "^2.24.0",
 		"next": "9.3.2",
 		"next-cookies": "^2.0.3",
+		"randomstring": "^1.1.5",
 		"react": "16.12.0",
-		"react-dom": "16.12.0"
+		"react-dom": "16.12.0",
+		"sequelize": "^5.21.6"
 	},
 	"devDependencies": {
 		"prettier": "^1.19.1"
