--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.19.1",
 		"bcrypt": "^4.0.1",
 		"coredb-models": "https://github.com/alleshq/coredb-models",
+		"formidable": "^1.2.2",
 		"js-cookie": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"mariadb": "^2.3.1",
