--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.19.1",
 		"bcrypt": "^4.0.1",
 		"coredb-models": "https://github.com/alleshq/coredb-models",
+		"form-data": "^3.0.0",
 		"formidable": "^1.2.2",
 		"js-cookie": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
@@ -24,7 +25,8 @@
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
 		"react-feather": "^2.0.4",
-		"sequelize": "^5.21.6"
+		"sequelize": "^5.21.6",
+		"sharp": "^0.25.2"
 	},
 	"devDependencies": {
 		"prettier": "^1.19.1"
