--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"format": "prettier --write \"**/*.+(js|jsx|json)\""
 	},
 	"dependencies": {
+		"@alleshq/log": "^1.0.0",
 		"argon2": "^0.26.2",
 		"axios": "^0.19.1",
 		"bcrypt": "^4.0.1",
