--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
     "useTabs": true,
-    "bracketSpacing": false
+    "bracketSpacing": false,
+    "trailingComma": "none",
+    "arrowParens": "avoid"
 }
