--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mariadb": "^2.3.1",
 		"moment": "^2.24.0",
-		"next": "9.3.2",
+		"next": "^9.4.0",
 		"next-cookies": "^2.0.3",
 		"randomstring": "^1.1.5",
 		"react": "16.12.0",
