--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"moment": "^2.24.0",
 		"next": "^9.4.0",
 		"next-cookies": "^2.0.3",
+		"nprogress": "^0.2.0",
 		"randomstring": "^1.1.5",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
