--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"react-dom": "16.12.0",
 		"react-feather": "^2.0.4",
 		"sequelize": "^5.21.6",
-		"sharp": "^0.25.2"
+		"sharp": "^0.25.2",
+		"uuid": "7.0.3"
 	},
 	"devDependencies": {
 		"prettier": "^2.0.5"
