--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-feather": "^2.0.4",
 		"sequelize": "^5.21.6",
 		"sharp": "^0.25.2",
+		"short-uuid": "^3.1.1",
 		"uuid": "7.0.3"
 	},
 	"devDependencies": {
