--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 		"format": "prettier --write \"**/*.+(js|jsx|json|css)\""
 	},
 	"dependencies": {
+		"@alleshq/coredb-models": "^0.1.0",
 		"@alleshq/log": "^1.0.0",
 		"@reactants/ui": "^0.18.0",
 		"argon2": "^0.26.2",
 		"axios": "^0.19.1",
 		"bcrypt": "^4.0.1",
-		"coredb-models": "https://github.com/alleshq/coredb-models",
 		"form-data": "^3.0.0",
 		"formidable": "^1.2.2",
 		"js-cookie": "^2.2.1",
