--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
 		"react-feather": "^2.0.4",
+		"react-google-recaptcha": "^2.1.0",
 		"sequelize": "^5.21.6",
 		"sharp": "^0.25.2",
 		"short-uuid": "^3.1.1",
