--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@alleshq/coredb-models": "^0.1.8",
 		"@alleshq/log": "^1.0.0",
+		"@charliewilco/gluejar": "^1.0.0",
 		"@reactants/ui": "^0.18.0",
 		"argon2": "^0.26.2",
 		"axios": "^0.19.1",
