--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@alleshq/log": "^1.0.0",
 		"@charliewilco/gluejar": "^1.0.0",
 		"@reactants/ui": "^0.18.0",
+		"@stripe/react-stripe-js": "^1.1.2",
+		"@stripe/stripe-js": "^1.7.0",
 		"argon2": "^0.26.2",
 		"axios": "^0.19.1",
 		"form-data": "^3.0.0",
@@ -32,6 +34,7 @@
 		"sequelize": "^5.21.6",
 		"sharp": "^0.25.2",
 		"short-uuid": "^3.1.1",
+		"stripe": "^8.64.0",
 		"uuid": "7.0.3"
 	},
 	"devDependencies": {
