New subscription creation

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ NEXT_PUBLIC_MODE="stable"
 NEXT_PUBLIC_APIURL="https://alles.cx/api"
 
 STRIPE_SK=""
+STRIPE_PLUS_MONTHLY=""
+STRIPE_PLUS_MONTHLY_MAX=""
+STRIPE_PLUS_YEARLY=""
+STRIPE_PLUS_YEARLY_MAX=""
