Credentials stored in .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,22 @@
 NEXT_PUBLIC_MODE="stable"
 NEXT_PUBLIC_APIURL="https://alles.cx/api"
 
+DB_HOST="",
+BB_NAME=""
+DB_USERNAME=""
+DB_PASSWORD=""
+
+SESSION_JWT=""
+MASTER_PASSWORD=""
+CONTENT_SCORE=""
+RECAPTCHA_SECRET=""
+
+ALLESFS_ID=""
+ALLESFS_SECRET=""
+
+LOGARITHM_ID="",
+LOGARITHM_SECRET=""
+
 STRIPE_SK=""
 STRIPE_PLUS_MONTHLY=""
 STRIPE_PLUS_MONTHLY_MAX=""
