Nexus api wrapper

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 NEXT_PUBLIC_MODE="stable"
 NEXT_PUBLIC_APIURL="https://alles.cx/api"
 
+NEXUS_ID=""
+NEXUS_PASSWORD=""
+
 DB_HOST="",
 BB_NAME=""
 DB_USERNAME=""
